<resources>
    <string name="app_name">FInalProject</string>
    <string name="thegarbagecan">theGarbageCan</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
</resources>