<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:textAlignment="center"
                tools:ignore="TextContrastCheck"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/contactPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/findButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/find"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/ascButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asc"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/descButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>